// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle > renders 1`] = `
<DocumentFragment>
  <form>
    <div
      class="_inline-field_dc87d2"
    >
      <div
        class="_inline-field-control_dc87d2"
      >
        <div
          class="_container_adcb29"
        >
          <input
            class="_input_adcb29"
            id=":r0:"
            role="switch"
            type="checkbox"
          />
          <div
            class="_ui_adcb29"
          />
        </div>
      </div>
      <div
        class="_inline-field-body_dc87d2"
      >
        <label
          class="_label_dc87d2"
          for=":r0:"
        >
          Simple setting
        </label>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Toggle > renders with a help message 1`] = `
<DocumentFragment>
  <form>
    <div
      class="_inline-field_dc87d2"
    >
      <div
        class="_inline-field-control_dc87d2"
      >
        <div
          class="_container_adcb29"
        >
          <input
            class="_input_adcb29"
            id=":r2:"
            role="switch"
            type="checkbox"
          />
          <div
            class="_ui_adcb29"
          />
        </div>
      </div>
      <div
        class="_inline-field-body_dc87d2"
      >
        <label
          class="_label_dc87d2"
          for=":r2:"
        >
          Simple setting
        </label>
        <span
          class="_message_dc87d2 _help-message_dc87d2"
          id="radix-:r4:"
        >
          A simple setting to control things
        </span>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`renders with a disabled message (disabled=false) 1`] = `
<DocumentFragment>
  <form>
    <div
      class="_inline-field_dc87d2"
    >
      <div
        class="_inline-field-control_dc87d2"
      >
        <div
          class="_container_adcb29"
        >
          <input
            class="_input_adcb29"
            id=":r9:"
            role="switch"
            type="checkbox"
          />
          <div
            class="_ui_adcb29"
          />
        </div>
      </div>
      <div
        class="_inline-field-body_dc87d2"
      >
        <label
          class="_label_dc87d2"
          for=":r9:"
        >
          Simple setting
        </label>
        <span
          class="_message_dc87d2 _help-message_dc87d2"
          id="radix-:rb:"
        >
          A simple setting to control things
        </span>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`renders with a disabled message (disabled=true) 1`] = `
<DocumentFragment>
  <form>
    <div
      class="_inline-field_dc87d2"
    >
      <div
        class="_inline-field-control_dc87d2"
      >
        <div
          class="_container_adcb29"
        >
          <input
            class="_input_adcb29"
            disabled=""
            id=":r5:"
            role="switch"
            type="checkbox"
          />
          <div
            class="_ui_adcb29"
          />
        </div>
      </div>
      <div
        class="_inline-field-body_dc87d2"
      >
        <label
          class="_label_dc87d2"
          for=":r5:"
        >
          Simple setting
        </label>
        <span
          class="_message_dc87d2 _help-message_dc87d2"
          id="radix-:r7:"
        >
          A simple setting to control things
        </span>
        <span
          class="_message_dc87d2 _help-message_dc87d2"
          id="radix-:r8:"
        >
          This is disabled.
        </span>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
